main site typ klar

--- a/minisajten-web-/minisajt.html
+++ b/minisajten-web-/minisajt.html
@@ -1,1 +1,24 @@
-test 2
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <header>
+        <div class="navbar">
+            <a href="beginner.html">Beginner</a>
+            <a href="">Experienced</a>
+            <a href="">Pro</a>
+        </div>
+    </header>
+
+    <p>
+        What champion should you play based on your experience?
+    </p>
+</body>
+</html>
