--- a/minisajten-web-/minisajt.html
+++ b/minisajten-web-/minisajt.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
+        <nav class="navbar">
             <a href="beginner.html">Beginner</a>
-            <a href="">Experienced</a>
-            <a href="">Pro</a>
-        </div>
+            <a href="experienced.html">Experienced</a>
+            <a href="pro.html">Pro</a>
+        </nav>
     </header>
 
     <p>
