gjorde beginner sidan css alla de 3 extra sidorna

--- a/minisajten-web-/beginner.html
+++ b/minisajten-web-/beginner.html
@@ -10,11 +10,50 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="minisajt.html"> BACK </a>
+            <a href="minisajt.html">Back</a>
+            <a href="experienced.html">Experienced</a>
+            <a href="pro.html">Pro</a>
         </nav>
     </header>
-    <div>
-        dkflskmfd
+    <p>
+        All these champions are easy to learn 
+        which makes you able to learn game 
+        mechanics instead of champion mechanics.
+        This is the best way to climb in ranks.
+    </p>
+    <div class="flex-container">
+        <div>Annie
+            <ul>
+                <li>mid</li>
+                <li>mage</li>
+                <li>easy mechanics</li> 
+                <li>easy laning phase</li>
+            </ul>
+        </div>
+        <div>Garen
+            <ul>
+                <li>top/jg</li>
+                <li>bruiser/tank</li>
+                <li>easy mechanics</li>
+                <li>good clearing</li>
+            </ul>
+        </div>
+        <div>Ashe
+            <ul>
+                <li>bot</li>
+                <li>adc</li>
+                <li>basic abilities</li>
+                <li>fun global ultimate</li>
+            </ul>
+        </div>
+        <div>Yuumi
+            <ul>
+                <li>supp</li>
+                <li>enchanter</li>
+                <li>easiest champ in the game</li>
+                <li>but still very good</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
