--- a/minisajten-web-/minisajt.html
+++ b/minisajten-web-/minisajt.html
@@ -19,6 +19,8 @@
 
     <p>
         What champion should you play based on your experience?
+        <br>
+        Choose your experience.
     </p>
 </body>
 </html>
