--- a/minisajten-web-/beginner.html
+++ b/minisajten-web-/beginner.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='secound.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='beginner.css'>
+    <link rel="stylesheet" href="font_noob.ttf">
     <title>Champs for beginners</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="minisajt.html">Back</a>
+            <a href="minisajt.html">Start menu</a>
             <a href="experienced.html">Experienced</a>
             <a href="pro.html">Pro</a>
         </nav>
@@ -32,7 +33,7 @@
         </div>
         <div>Garen
             <ul>
-                <li>top/jg</li>
+                <li>top/jungler</li>
                 <li>bruiser/tank</li>
                 <li>easy mechanics</li>
                 <li>good clearing</li>
@@ -48,7 +49,7 @@
         </div>
         <div>Yuumi
             <ul>
-                <li>supp</li>
+                <li>support</li>
                 <li>enchanter</li>
                 <li>easiest champ in the game</li>
                 <li>but still very good</li>
