--- a/minisajten-web-/experienced.html
+++ b/minisajten-web-/experienced.html
@@ -4,14 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='secound.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='experienced.css'>
     <title>Champs for beginners</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="minisajt.html"> BACK </a>
+            <a href="minisajt.html">Start menu</a>
+            <a href="beginner.html">Beginner</a>
+            <a href="pro.html">Pro</a>
         </nav>
     </header>
+    <p>
+        These champions are not super hard to learn
+        and understand how to use proporly. But they
+        are very hard to master. Some take good mechanics
+        and some take good game knowladge.
+    </p>
+    <div class="flex-container">
+        <div>Irelia
+            <ul>
+                <li>top/mid</li>
+                <li>bruiser</li>
+                <li>hard mechanics</li> 
+                <li>her q is key</li>
+            </ul>
+        </div>
+        <div>Evelyn
+            <ul>
+                <li>jungler</li>
+                <li>assasin</li>
+                <li>easy to get picks</li>
+                <li>super hard teamfighting</li>
+            </ul>
+        </div>
+        <div>Kalista
+            <ul>
+                <li>bot</li>
+                <li>adc</li>
+                <li>very hard kiting</li>
+                <li>high mobility</li>
+            </ul>
+        </div>
+        <div>Bard
+            <ul>
+                <li>support</li>
+                <li>roam/cc</li>
+                <li>best raoming support</li>
+                <li>hard to know when to roam</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
