--- a/minisajten-web-/minisajt.html
+++ b/minisajten-web-/minisajt.html
@@ -20,7 +20,7 @@
     <p>
         What champion should you play based on your experience?
         <br>
-        Choose your experience.
+        Choose your experience above.
     </p>
 </body>
 </html>
