--- a/minisajten-web-/pro.html
+++ b/minisajten-web-/pro.html
@@ -4,14 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='secound.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='pro.css'>
     <title>Champs for beginners</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <a href="minisajt.html"> BACK </a>
+            <a href="minisajt.html">Start menu</a>
+            <a href="beginner.html">Beginner</a>
+            <a href="experienced.html">experienced</a>
         </nav>
     </header>
+    <p>
+        These are the best champions for pro-play
+        based of worlds champion-chip 2022. Most 
+        of them rely on a good team and team synargies
+        and are often not as good in regular ranked 
+        games.
+    </p>
+    <div class="flex-container">
+        <div>Zeri
+            <ul>
+                <li>bot</li>
+                <li>adc</li>
+                <li>really hard kiting</li> 
+                <li>high monility</li>
+            </ul>
+        </div>
+        <div>Nautilus
+            <ul>
+                <li>support</li>
+                <li>tank</li>
+                <li>really good cc</li>
+                <li>can get picks easy</li>
+            </ul>
+        </div>
+        <div>Azir
+            <ul>
+                <li>mid</li>
+                <li>basicly an adc</li>
+                <li>hard potitioning</li>
+                <li>really game chaging ultimate</li>
+            </ul>
+        </div>
+        <div>Aatrox
+            <ul>
+                <li>top</li>
+                <li>bruiser</li>
+                <li>a lot of healing</li>
+                <li>good cc for teamfighting</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
