--- a/minisajten-web-/minisajt.html
+++ b/minisajten-web-/minisajt.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>What champ to play?</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="https://kit.fontawesome.com/b0020c795c.css" crossorigin="anonymous">    
     <script src='main.js'></script>
+    <script src="https://kit.fontawesome.com/7a6afc2556.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -14,6 +16,7 @@
             <a href="beginner.html">Beginner</a>
             <a href="experienced.html">Experienced</a>
             <a href="pro.html">Pro</a>
+            <a href="https://discord.com/invite/leagueoflegends"><i class="fa-brands fa-discord"></i></a>
         </nav>
     </header>
 
