--- a/minisajten-web-/pro.html
+++ b/minisajten-web-/pro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href='pro.css'>
-    <title>Champs for beginners</title>
+    <title>Champs for pros</title>
 </head>
 <body>
     <header>
